@@ -219,13 +219,13 @@ void TestGMWL::test_optimizer(void)
     double fit_results[] = {83.6331,             0,
                             22.0145,             0,
                             0.00231438040883405, 0.000191759607698647,
-                            -3.12006,            0.128382,
+                            -3.11815,            0.128382,
                             1,                   0,
                             1,                   0,
                             83.6331,             0,
                             22.0145,             0,
                             4.5050091460345e-11, 1.95885803229878e-12,
-                            -2.13765,            0.00578641,
+                            -2.13705,            0.00578641,
                             1000,                0,
                             1,                   0};
     test_try("Perform LM optimization");
