@@ -55,13 +55,14 @@ public:
     virtual int           iter(void) const;
     
     // Methods
-    void          max_iter(const int& n);
-    void          max_stalls(const int& n);
-    void          max_boundary_hits(const int& n);
-    void          lambda_start(const double& val);
-    void          lambda_inc(const double& val);
-    void          lambda_dec(const double& val);
+    void          max_iter(const int& max_iter);
+    void          max_stalls(const int& max_stalls);
+    void          max_boundary_hits(const int& max_hit);
+    void          lambda_start(const double& value);
+    void          lambda_inc(const double& value);
+    void          lambda_dec(const double& value);
     void          eps(const double& eps);
+    void          accept_dec(const double& value);
     int           max_iter(void) const;
     int           max_stalls(void) const;
     int           max_boundary_hits(void) const;
@@ -69,6 +70,7 @@ public:
     const double& lambda_inc(void) const;
     const double& lambda_dec(void) const;
     const double& eps(void) const;
+    const double& accept_dec(void);
 };
 
 
